그래프 추가

--- a/운영체제.md
+++ b/운영체제.md
@@ -45,4 +45,27 @@
 - 여러 프로그램이 동시에 안전하고 효율적으로 실행될 수 있도록 돕는 
 - 필수 소프트웨어
 
+```mermaid
+graph TD
+    subgraph Hardware
+        A[CPU] --> B[Memory]
+        A --> C[Storage]
+        A --> D[Input/Output Devices]
+    end
+
+    subgraph Operating_System
+        E[Kernel] --> F[Process Management]
+        E --> G[Memory Management]
+        E --> H[File System]
+        E --> I[Device Drivers]
+        J[Shell] --> K[User Interface]
+    end
+
+    B --> E
+    C --> E
+    D --> I
+    K --> J
+
+    User --> K
+```
 ---
