--- a/+.md
+++ b/+.md
@@ -21,6 +21,19 @@
 | 대기 (Blocked) | I/O 등 이벤트를 기다려 CPU를 사용할 수 없는 상태               |
 | 종료 (Terminated) | 프로세스 실행 종료, 자원 반납 완료 상태                     |
 
+```mermaid
+stateDiagram-v2
+[] --> New : 프로세스 생성
+New --> Ready : 초기화 완료
+Ready --> Running : CPU 할당
+Running --> Blocked : 입출력 대기
+Running --> Ready : 선점, 시간 만료
+Blocked --> Ready : 입출력 완료
+Running --> Terminated : 종료
+Terminated --> []
+```
+
+
 ---
 
 ### 프로세스 제어 블록 (PCB)
